Adding in boilerplate customizations to base project

--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "build": "ng build --target=production --aot",
+    "coverage": "ng test --environment=dev --no-watch --code-coverage --single-run=true",
+    "lint": "ng lint && scssfmt --recursive './src/**/**/*.scss' --diff",
+    "update-deps": "npm update"
   },
   "private": true,
   "dependencies": {
@@ -21,6 +20,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
@@ -41,8 +41,10 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
+    "scssfmt": "^1.0.6",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
+    "tslint-config-airbnb": "^5.8.0",
     "typescript": "~2.5.3"
   }
 }
