--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "6.0.7",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "ngx-highlightjs": "^2.1.1",
     "rxjs": "^6.2.1",
     "zone.js": "^0.8.26"
   },
